--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,13 @@
 {
 	"extends": "@oly_op/tsconfig",
 	"compilerOptions": {
-		"isolatedModules": true,
 		"skipLibCheck": true,
+		"jsx": "react",
+		"outDir": "dist",
 		"module": "ESNext",
 		"moduleResolution": "Bundler",
-		"noEmit": true,
-		"jsx": "react",
 		"jsxFactory": "createElement",
 		"jsxFragmentFactory": "Fragment"
-	}
+	},
+	"include": ["src"]
 }
